<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civProduct"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@drawable/ic_baseline_add_to_photos_24" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/border"
            android:hint="@string/name_food"
            android:paddingLeft="@dimen/dp_5" />

        <EditText
            android:id="@+id/edtCode"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/border"
            android:hint="@string/id_food"
            android:paddingLeft="@dimen/dp_5" />

        <EditText
            android:id="@+id/edtPrice"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/border"
            android:hint="@string/price_food"
            android:paddingLeft="@dimen/dp_5" />

        <EditText
            android:id="@+id/edtDescribe"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/border"
            android:hint="@string/describe_food"
            android:paddingLeft="@dimen/dp_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/save"
                android:textColor="@color/Black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/cancel"
                android:textColor="@color/Black" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>