<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/White"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cập nhật thông tin người nhận"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enterFullName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:hint="@string/enterPhoneNumber"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterAddress"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnChange"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#52c4d6"
            android:text="Cập nhật" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#52c4d6"
            android:text="Hủy" />

    </LinearLayout>
</LinearLayout>